@@ -11,6 +11,7 @@ mlr_2.4:
   regr/classif for ctree, regr/classif/surv for cforest, and regr/classif for blackboost
 - update on learners: added sparseLDA and removed xgboost
 - reg.km: added param 'iso'
+- classif.mda: added param 'start.method' and changed its default to 'lvq'
 
 mlr_2.3:
 - resample now returns an object of class ResampleResult (downward compatible)
